--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
@@ -33,6 +34,7 @@
     "@types/uuid": "^9.0.7",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.6",
+    "framer-motion": "^10.16.16",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
     "react": "^18",
