--- a/client/package.json
+++ b/client/package.json
@@ -32,12 +32,14 @@
     "@types/dompurify": "^3.0.5",
     "@types/react-easy-crop": "^2.0.0",
     "@types/uuid": "^9.0.7",
+    "apexcharts": "^3.45.1",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.6",
     "framer-motion": "^10.16.16",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.2",
