--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "@types/passport": "^1.0.14",
     "@types/passport-facebook": "^3.0.2",
     "@types/passport-oauth2": "^1.4.14",
+    "@types/request-ip": "^0.0.41",
+    "@types/useragent": "^2.3.4",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
@@ -44,11 +46,13 @@
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-oauth2": "^1.7.0",
+    "request-ip": "^3.3.0",
     "sharp": "^0.32.6",
     "socket.io": "^4.7.2",
     "stripe": "^14.2.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "useragent": "^2.3.0"
   }
 }
