--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-easy-crop": "^5.0.2",
