--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mui/material": "^5.15.6",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-collapsible": "^1.0.3",
@@ -56,6 +59,7 @@
     "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.0.0",
     "uuid": "^9.0.1",
+    "video-snapshot": "^1.0.11",
     "yup": "^1.3.2"
   },
   "devDependencies": {
