✨ Change port variable case to uppercase for better semantics

--- a/server/.env
+++ b/server/.env
@@ -51,3 +51,6 @@ SECRECT_STRIPE_KEY=sk_test_51NVtbtCMmhi1B7dqS0zOk7MWNogMuOFoh9Ovw2yL7Dj3uYwFJswI
 IPSTACK_ACCESSS_KEY=42c92d0224e4cd1e756bd9bebc84ec6a
 
 
+REDIS_URL=redis://default:4RkEaOnMpcTtnnGb6dtHWbL9PF57yFtg@redis-19905.c299.asia-northeast1-1.gce.cloud.redislabs.com:19905
+ACTIVATION_SECRET=toikhongconyeucoaynua
+
