✨ (client): Add "@tanstack/react-table" dependency to enable the usage of React Table library, ♻️ (client): Remove "framer-motion" dependency as it is no longer needed.

--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.0",
+    "@tanstack/react-table": "^8.13.2",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
     "@types/dompurify": "^3.0.5",
@@ -42,7 +43,6 @@
     "apexcharts": "^3.45.1",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.6",
-    "framer-motion": "^10.16.16",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
     "react": "^18",
