🔧 (package-lock.json): add framer-motion package to client dependencies 🔧 (package.json): add framer-motion package to client dependencies ♻️ (CourseAccessLayout.tsx): refactor CourseAccessLayout component by removing unnecessary imports regarding noteCourse functionality and components

--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "apexcharts": "^3.45.1",
     "dayjs": "^1.11.10",
     "dompurify": "^3.0.6",
+    "framer-motion": "^11.0.8",
     "next": "14.0.1",
     "next-themes": "^0.2.1",
     "react": "^18",
