--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://elearning-server-qhsb.onrender.com",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
