📝 (Categories.tsx): Ensure categoryData has items before mapping to display   📝 (MyCourses.tsx): Handle category field type to be string or CategoryType   📝 (CourseLayout.tsx): Add author information link in CourseLayout component   📝 (ProgressCourse.tsx): Check processedData length before rendering   ♻️ (couresContentType.ts): Update category field type to accept string or CategoryType   🔧 (server/.env): Add new BACKEND_HOST2 environment variable   🔧 (app.ts): Refactor cookie config to simplify and improve consistency   🔧 (passport.ts): Update callbackURL depending on production environment   🔧 (auth.controller.ts): Simplify cookie clearing process   🔧 (course.service.ts): Remove unused CreateCourseType type   🔧 (user.service.ts): Add getAllStudentsByAdmin and getAllIntructor functions   🔧 (jwt.ts): Simplify and improve cookie options and sending token logic

--- a/server/.env
+++ b/server/.env
@@ -38,6 +38,8 @@ GOOGLE_CLIENT_SECRET=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
 
 BACKEND_HOST=http://localhost:8000
 
+BACKEND_HOST2=https://elearning-server-qhsb.onrender.com
+
 FACEBOOK_CLIENT_ID=331417799579265
 
 FACEBOOK_SECRET_KEY=64064be347c66732ab3b47a785e6804e
